# chess_project

./: CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md
.github/workflows/: windows_build.yml
chess_project/: CMakeLists.txt  CMakeUserPresets.json  ChessBoardModel.cpp  Pawn.cpp  Pawn.h  Piece.h  Pieces.cpp  Pieces.h  Types.h  main.cpp  main.qml
chess_project/connection/: ChessBoardQmlModel.cpp  ChessBoardQmlModel.h
chess_project/elements/: CapturedPieces.qml  ChessBoard.qml  ChessStartText.qml  GetStartedBtn.qml  GoBackBtn.qml  MenuButton.qml  MoveHistoryPanel.qml  PlayerTimer.qml  TimeControlMenu.qml
chess_project/logic/: ChessBoardModel.h  ChessClock.cpp  ChessClock.h  ChessGame.cpp  ChessGame.h  Piece.h  Pieces.cpp  Pieces.h  Types.h
chess_project/pages/: CreditsPage.qml  GamePage.qml  MainMenu.qml  StartPage.qml
